feat: att tests
Corrigindo problemas com alguns métodos e terminando os testes
