# stray-code-back/src/routes/userRoute.js
@@ -3,8 +3,8 @@ const router = express.Router();
 const userController = require('../controller/userController');
 const authenticateJWT = require('../middleware/authenticateJWT')
 
-router.get('/login/:id', authenticateJWT, userController.details);
-router.put('/login/:id', authenticateJWT, userController.updatePassword);
-router.delete('/login/:id', authenticateJWT, userController.deleteUser);
+router.get('/user/:id', authenticateJWT, userController.details);
+router.put('/user/:id', authenticateJWT, userController.updatePassword);
+router.delete('/user/:id', authenticateJWT, userController.deleteUser);
 
 module.exports = router;
